aria, Name spacing, bug fixing

--- a/main/css/main.css
+++ b/main/css/main.css
@@ -252,6 +252,9 @@ ul {
 .products__item {
     min-width: 33%;
     width: 100%;
+    /*background-color: rgb(35, 35, 35);*/
+    /*border-radius: 5px;*/
+    /*padding-top: 0.8rem;*/
     height: 16.66%;
     margin: 0 0.8rem;
     /* border: 1px solid black; */
@@ -433,7 +436,7 @@ ul {
     display: none;
     flex-direction: row;
     flex-wrap: wrap;
-    /* align-items: space-between; */
+    align-items: space-between; 
     justify-content: center;
     width: 90%;
     max-width: 58.125rem;
